have range editing working
