# openapi.yaml
@@ -58,7 +58,9 @@ paths:
                 type: object
                 properties:
                   result:
-                    type: string
+                    type: array
+                    items:
+                      type: string
   /api/rmdir:
     delete:
       operationId: rmdirFunction
@@ -79,28 +81,9 @@ paths:
                 type: object
                 properties:
                   result:
-                    type: string
-  /api/readfile:
-    get:
-      operationId: readFileFunction
-      summary: Read a file. If an error occurs due to the filename not being available, consider using the listFunction recursively to see available files.
-      parameters:
-      - in: query
-        name: path
-        schema:
-          type: string
-        required: true
-        description: The relative path of the file to read.
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  result:
-                    type: string
+                    type: array
+                    items:
+                      type: string
   /api/writefile:
     post:
       operationId: writeFileFunction
@@ -125,7 +108,9 @@ paths:
                 type: object
                 properties:
                   result:
-                    type: string
+                    type: array
+                    items:
+                      type: string
   /api/deletefile:
     delete:
       operationId: deleteFileFunction
@@ -146,7 +131,9 @@ paths:
                 type: object
                 properties:
                   result:
-                    type: string
+                    type: array
+                    items:
+                      type: string
   /api/rename:
     post:
       operationId: renameFunction
@@ -171,7 +158,9 @@ paths:
                 type: object
                 properties:
                   result:
-                    type: string
+                    type: array
+                    items:
+                      type: string
   /api/searchreplace:
     post:
       operationId: searchReplaceFunction
@@ -266,3 +255,61 @@ paths:
                         type: string
                       message:
                         type: string
+  /api/readfile:
+    get:
+      operationId: readFileFunction
+      summary: Read a file. If an error occurs due to the filename not being available, consider using the listFunction recursively to see available files.
+      parameters:
+      - in: query
+        name: path
+        schema:
+          type: string
+        required: true
+        description: The relative path of the file to read.
+      - in: query
+        name: range
+        schema:
+          type: string
+        required: false
+        description: The range of lines to read, in the format 'start-end'.
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  result:
+                    type: array
+                    items:
+                      type: string
+  /api/writerange:
+    post:
+      operationId: writeRangeFunction
+      summary: Replace a range of lines in a file.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                path:
+                  type: string
+                lines:
+                  type: array
+                  items:
+                    type: string
+                range:
+                  type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  result:
+                    type: string
